--- a/bahng-bio.html
+++ b/bahng-bio.html
@@ -28,9 +28,27 @@
 </nav>
 
 <div class="image-row">
-      <img src="hannahbioside1.jpg" alt="Bahng 1">
-      <img src="hannahbiomiddle.png" alt="Bahng 2">
-      <img src="hannahbioside2.jpg" alt="Bahng 3">
+  <div class="text-block">
+    <h2>Heading One</h2>
+    <p>This is some sample text describing the first image.</p>
+  </div>
+  <img src="hannahbioside1.jpg" alt="Bahng 1">
+</div>
+
+<div class="image-row">
+  <img src="hannahbiomiddle.png" alt="Bahng 2">
+  <div class="text-block">
+    <h2>Heading Two</h2>
+    <p>This is some sample text describing the second image.</p>
+  </div>
+</div>
+
+<div class="image-row">
+  <div class="text-block">
+    <h2>Heading Three</h2>
+    <p>This is some sample text describing the third image.</p>
+  </div>
+  <img src="hannahbioside2.jpg" alt="Bahng 3">
 </div>
         
     </body>
