--- a/bahng-bio.html
+++ b/bahng-bio.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles.css" rel="stylesheet" type="text/css">
         <link href="1-hannah-styles.css" rel="stylesheet" type="text/css">
 
         <title>Bahng Bio</title>
     </head>
+
+
 
       <body>
 
         <header class="site-header">
         <h1>Bahng Bio</h1>
         </header>
+
 
 <nav class="navigation">
       <ul>
@@ -27,25 +29,28 @@
       </ul>
 </nav>
 
-<div class="image-row">
+
+<div class="image-row image-row-1">
   <div class="text-block">
-    <h2>Heading One</h2>
+    <h2>Fun Facts</h2>
     <p>This is some sample text describing the first image.</p>
   </div>
   <img src="hannahbioside1.jpg" alt="Bahng 1">
 </div>
 
-<div class="image-row">
+
+<div class="image-row image-row-2">
   <img src="hannahbiomiddle.png" alt="Bahng 2">
   <div class="text-block">
-    <h2>Heading Two</h2>
+    <h2>If Not This, Then What?</h2>
     <p>This is some sample text describing the second image.</p>
   </div>
 </div>
 
-<div class="image-row">
+
+<div class="image-row image-row-3">
   <div class="text-block">
-    <h2>Heading Three</h2>
+    <h2>Family Dynamic</h2>
     <p>This is some sample text describing the third image.</p>
   </div>
   <img src="hannahbioside2.jpg" alt="Bahng 3">
