--- a/elilish-bio.html
+++ b/elilish-bio.html
@@ -27,10 +27,30 @@
       </ul>
 </nav>
 
-<div class="image-row">
-      <img src="billiebio1.png" alt="Eilish 1">
-      <img src="billiebiomiddle.png" alt="Eilish 2">
-      <img src="billiebio2.png" alt="Eilish 3">
+<div class="image-row image-row-1">
+  <div class="text-block">
+    <h2>Fun Facts</h2>
+    <p>This is some sample text describing the first image.</p>
+  </div>
+  <img src="billiebio1.png" alt="Eilish 1">
+</div>
+
+
+<div class="image-row image-row-2">
+  <img src="billiebiomiddle.png" alt="Eilish 2">
+  <div class="text-block">
+    <h2>If Not This, Then What?</h2>
+    <p>This is some sample text describing the second image.</p>
+  </div>
+</div>
+
+
+<div class="image-row image-row-3">
+  <div class="text-block">
+    <h2>Family Dynamic</h2>
+    <p>This is some sample text describing the third image.</p>
+  </div>
+  <img src="billiebio2.png" alt="Eilish 3">
 </div>
 
     </body>
