--- a/kaze-bio.html
+++ b/kaze-bio.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles.css" rel="stylesheet" type="text/css">
         <link href="3-fuji-styles.css" rel="stylesheet" type="text/css">
 
         <title>Kaze Bio</title>
@@ -27,10 +26,29 @@
       </ul>
 </nav>
 
-<div class="image-row">
-      <img src="fujibio1jpg.jpg" alt="Kaze 1">
-      <img src="fujibiomiddle.jpg" alt="Kaze 2">
-      <img src="fujibio2.jpg" alt="Kaze 3">
+<div class="image-row image-row-1">
+  <div class="text-block">
+    <h2>Fun Facts</h2>
+    <p>This is some sample text describing the first image.</p>
+  </div>
+  <img src="fujibio1jpg.jpg" alt="Kaze 1">
+</div>
+
+<div class="image-row image-row-2">
+  <img src="fujibiomiddle.jpg" alt="Kaze 2">
+  <div class="text-block">
+    <h2>If Not This, Then What?</h2>
+    <p>This is some sample text describing the second image.</p>
+  </div>
+</div>
+
+
+<div class="image-row image-row-3">
+  <div class="text-block">
+    <h2>Family Dynamic</h2>
+    <p>This is some sample text describing the third image.</p>
+  </div>
+  <img src="fujibio2.jpg" alt="Kaze 3">
 </div>
 
     </body>
