--- a/elilish-bio.html
+++ b/elilish-bio.html
@@ -48,7 +48,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Fun Facts</h2>
-    <p>This is some sample text describing the first image.</p>
+    <p>Base concepts to Elaborate On: Vegan Lifestyle, creating music with brother, collaboration with the Barbie movie, etc.</p>
   </div>
   <img src="billiebio1.png" alt="Eilish 1">
 </div>
@@ -58,7 +58,7 @@
   <img src="billiebiomiddle.png" alt="Eilish 2">
   <div class="text-block">
     <h2>If Not This, Then What?</h2>
-    <p>This is some sample text describing the second image.</p>
+    <p>Base concepts to Elaborate On: Songwriting & Production, Visual Arts/Directing, other Creative Outlets, etc.</p>
   </div>
 </div>
 
@@ -66,7 +66,7 @@
 <div class="image-row image-row-3">
   <div class="text-block">
     <h2>Family Dynamic</h2>
-    <p>This is some sample text describing the third image.</p>
+    <p>Billie Eilish has a family of four with one sibling. She is the youngest with one older brother named Finneas who is also a musician. </p>
   </div>
   <img src="billiebio2.png" alt="Eilish 3">
 </div>
