--- a/kaze-bio.html
+++ b/kaze-bio.html
@@ -47,7 +47,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Fun Facts</h2>
-    <p>This is some sample text describing the first image.</p>
+    <p>Despite his rising popularity some fans may not know that Fuji Kaze is vegetarian. Similarly, while there may not be an official fandom name for those who appreciate Fuji Kaze and his music, a term that dedicated fans have been using to reference individuals of the fan base is Kazetarian(s). </p>
   </div>
   <img src="fujibio1jpg.jpg" alt="Kaze 1">
 </div>
@@ -56,7 +56,7 @@
   <img src="fujibiomiddle.jpg" alt="Kaze 2">
   <div class="text-block">
     <h2>If Not This, Then What?</h2>
-    <p>This is some sample text describing the second image.</p>
+    <p>While Fuji Kaze has not stated outright an alternate career path that he has considered, he has a number of skillsets that reason he would be successful in various fields outside of a singer. Thus, a pianist, music teacher, or musical producer/composer are likely alternate occupations as he has played the piano from a young age.</p>
   </div>
 </div>
 
@@ -64,7 +64,7 @@
 <div class="image-row image-row-3">
   <div class="text-block">
     <h2>Family Dynamic</h2>
-    <p>This is some sample text describing the third image.</p>
+    <p>Fuji Kaze has a family of six with three siblings. He is the youngest child as he has an older brother and two older sisters.</p>
   </div>
   <img src="fujibio2.jpg" alt="Kaze 3">
 </div>
