--- a/elilish-bio.html
+++ b/elilish-bio.html
@@ -48,7 +48,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Fun Facts</h2>
-    <p>Base concepts to Elaborate On: Vegan Lifestyle, creating music with brother, collaboration with the Barbie movie, etc.</p>
+    <p>While Billie Eilish has gained substantial recognition over the past few years, many people may not know too much about her. More specifically, she maintains a vegan lifestyle, creates music with brother, and has collaborated with the Barbie movie in 2023 as part of their soundtrack.</p>
   </div>
   <img src="billiebio1.png" alt="Eilish 1">
 </div>
@@ -58,7 +58,7 @@
   <img src="billiebiomiddle.png" alt="Eilish 2">
   <div class="text-block">
     <h2>If Not This, Then What?</h2>
-    <p>Base concepts to Elaborate On: Songwriting & Production, Visual Arts/Directing, other Creative Outlets, etc.</p>
+    <p>While Billie Eilish has not explicitly stated alternative career paths that she has considered, she has a many talents that indicate she would be successful in career paths other than singing. Thus, it would make sense for her to remain connected to the arts through Directing, Songwriting and Production, among other Creative Outlets.</p>
   </div>
 </div>
 
